--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "242b5b0a",
+   "id": "ae95c7eb",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8940eded",
+   "id": "7ad2e3ac",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b6e6b09",
+   "id": "0150842f",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -74,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "9fea9929",
+   "execution_count": 1,
+   "id": "ae2ea025",
    "metadata": {
     "scrolled": true
    },
@@ -84,78 +84,68 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-21 18:14:02,451\tINFO services.py:1476 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
+      "2022-06-30 08:58:31,435\tINFO services.py:1476 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RayContext(dashboard_url='127.0.0.1:8265', python_version='3.7.4', ray_version='1.13.0', ray_commit='e4ce38d001dbbe09cd21c497fedd03d692b2be3e', address_info={'node_ip_address': '127.0.0.1', 'raylet_ip_address': '127.0.0.1', 'redis_address': None, 'object_store_address': '/tmp/ray/session_2022-06-30_08-58-28_638637_83607/sockets/plasma_store', 'raylet_socket_name': '/tmp/ray/session_2022-06-30_08-58-28_638637_83607/sockets/raylet', 'webui_url': '127.0.0.1:8265', 'session_dir': '/tmp/ray/session_2022-06-30_08-58-28_638637_83607', 'metrics_export_port': 61988, 'gcs_address': '127.0.0.1:60797', 'address': '127.0.0.1:60797', 'node_id': '1bf5ac03191a8d67d1a192acc27bb5739dfd5d599ee46c46219605b4'})"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Import ray and initialize a local Ray cluster.\n",
     "import ray\n",
-    "ray.init()\n",
-    "\n",
-    "# Download the tiny version of the dataset.\n",
-    "import os\n",
-    "import urllib.request\n",
-    "\n",
-    "tiny_dataset = [\n",
-    "    \"https://upload.wikimedia.org/wikipedia/commons/2/27/QEMU_6.2_screenshot_%28cropped%29.png\",\n",
-    "    \"https://upload.wikimedia.org/wikipedia/commons/c/ce/GNOME_Screenshot_3.32.png\",\n",
-    "    \"https://upload.wikimedia.org/wikipedia/commons/f/f3/Miranda_IM_0.6.8_customized.png\",\n",
-    "]\n",
-    "\n",
-    "OCR_DATA = \"/tmp/ocr_data/\"\n",
-    "\n",
-    "for i, url in enumerate(tiny_dataset):\n",
-    "    os.makedirs(OCR_DATA, exist_ok=True)\n",
-    "    urllib.request.urlretrieve(url, OCR_DATA + str(i) + \".png\")"
+    "ray.init()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2c2bb5da",
+   "id": "58cc4167",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
     "\n",
-    "We first create a list `files` of absolute paths of the file names and then convert it into a Ray Dataset with the `ray.data.from_items` function. We can now run the `.map` function on this dataset of file names to run the actual OCR process on each file and convert the screen shots into text. Note that we only store the paths of the filenames and the OCR'ed text in the dataset to keep the size of the dataset manageble. If you have large binary blobs like images or videos, it can be beneficial to store them outside of the dataset and store only the extracted information in the dataset."
+    "We can now use the `ray.data.read_binary_files` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and  and then run the `.map` function on this dataset of file names to run the actual OCR process on each file and convert the screen shots into text. Note that we only store the paths of the filenames and the OCR'ed text in the dataset to keep the size of the dataset manageble. If you have large binary blobs like images or videos, it can be beneficial to store them outside of the dataset and store only the extracted information in the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "31bab2af",
-   "metadata": {
-    "tags": [
-     "remove-output"
-    ]
-   },
+   "execution_count": 4,
+   "id": "c04e38e1",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-21 18:14:12,151\tWARNING dataset.py:3391 -- The `map`, `flat_map`, and `filter` operations are unvectorized and can be very slow. Consider using `.map_batches()` instead.\n",
-      "Map: 100%|██████████| 3/3 [00:01<00:00,  2.40it/s]\n"
+      "2022-06-30 09:15:35,088\tWARNING read_api.py:256 -- The number of blocks in this dataset (3) limits its parallelism to 3 concurrent tasks. This is much less than the number of available CPU slots in the cluster. Use `.repartition(n)` to increase the number of dataset blocks.\n",
+      "Read->Map: 100%|██████████| 3/3 [00:14<00:00,  4.69s/it]\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "from glob import glob\n",
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
     "import pytesseract\n",
     "\n",
-    "files = glob(OCR_DATA + \"*\")\n",
-    "ds = ray.data.from_items(files)\n",
+    "def perform_ocr(data):\n",
+    "    path, img = data\n",
+    "    return {\"path\": path, \"text\": pytesseract.image_to_string(Image.open(BytesIO(img)))}\n",
     "\n",
-    "def perform_ocr(path):\n",
-    "    return {\"path\": path, \"text\": pytesseract.image_to_string(path)}\n",
+    "ds = ray.data.read_binary_files(\"s3://air-example-data/ocr_tiny_dataset\", include_paths=True)\n",
     "\n",
     "results = ds.map(perform_ocr)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4d9301b8",
+   "id": "5172fca3",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -163,22 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c2b3d356",
+   "execution_count": 5,
+   "id": "0e8f1dbf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ArrowRow({'path': '/tmp/ocr_data/2.png',\n",
-       "           'text': '© Viktor (Online) : Message Session\\n\\n“etto| © Whter | steno\\n\\nremus\\ntet? Fiviha\\n\\n17: dokonca to vie aj video @\\nViktor\\n\\n1818. 55 samozrejme\\n\\nremus\\n\\n‘e138: hmm\\n\\ntere: a skusal si to uz?\\n\\nViktor\\n\\na:18: €€\\n\\n1818: len moj brat to skusal\\nremus\\n\\nWA\\n\\nOG8hO38\\n\\nseettsgmailcom [0]\\nonline\\n\\n@ Heenan a\\n\\nOnline\\n\\nsero\\nBEE:..... 0088\\n@ ore\\n\\naway\\n\\nTue\\nhn\\n\\n& Wee\\n\\nYep, Tm here\\n\\n'}),\n",
-       " ArrowRow({'path': '/tmp/ocr_data/1.png',\n",
-       "           'text': 'Take Screenshot\\n\\n© Grab the whole screen\\nGrab the current window\\n\\n|_| eeeeeeter\\n\\nGrab after a delay of 0 +. seconds\\n\\nEffects\\nInclude pointer\\n¥ Include the window border\\n\\nApply effect: None Sa\\n'}),\n",
-       " ArrowRow({'path': '/tmp/ocr_data/0.png',\n",
+       "[ArrowRow({'path': 'air-example-data/ocr_tiny_dataset/gnome_screenshot.png',\n",
+       "           'text': '= Cancel\\n\\nTake Screenshot\\n© Grab the whole screen\\n\\nGrab the current window\\n\\n|_| eeeeeeter\\n\\nGrab after a delay of 0\\n\\nEffects\\nInclude pointer\\n\\n¥ Include the window border\\n\\nApply effect: None Sa\\n\\n+. seconds\\n'}),\n",
+       " ArrowRow({'path': 'air-example-data/ocr_tiny_dataset/miranda_screenshot.png',\n",
+       "           'text': '© Viktor (Online) : Message Session\\n\\n“etto| © Whter | steno\\n\\nremus\\ntet? Fiviha\\n\\n17: dokonca to vie aj video @\\nViktor\\n\\n1818. 55 samozrejme\\n\\n1818: len moj brat to skusal\\nremus\\n\\nWA\\n\\n098003 —\\n\\nseettsgmailcom [0]\\n\\nonline\\n\\nHacemen\\n@ Ce\\n\\nieFFo\\n169 6 je <>vin ©®\\n\\nBe 22\\n\\naway\\n\\nTue\\nhn\\n\\n& Wee\\n\\nYep, Tm here\\n\\n&\\nea\\na\\nLS]\\n\\n'}),\n",
+       " ArrowRow({'path': 'air-example-data/ocr_tiny_dataset/qemu_screenshot.png',\n",
        "           'text': 'File Edit View Bookmarks\\n\\n[i New Tab [If] split view ~\\n\\n43044 kousekip\\n\\nPlugins\\n\\nkousekip:ako-kaede-mirai(htop)\\n\\nkousekip:ako-kaede-mirai(qemu-system-x86)\\n\\nSettings\\n\\nHelp\\n\\nkousekip:ako-kaede-miral(htop) — Konsole vax\\n\\nFl Paste Q Find\\n\\nEMU vax\\n\\nMachine View\\n\\nApplications Places System @)C) Fri Feb 18, 13:56\\n\\nTerminal\\n\\nroot root\\nroot sys\\nroot sys\\nroot sys\\nroot sys\\nroot sys\\nroot root\\nroot sys\\nroot bin\\nroot root\\nroot sys\\nroot root\\nroot sys\\nroot sys\\nroot root\\nroot root\\nroot root\\nroot sys\\nroot root\\nroot sys\\nroot sys\\n2 root —sys\\nkousekip@ako-kaede-mirai-sun:~$ If\\n\\nbin -> ./usr/bin\\nboot\\ndev\\ndevices\\netc\\nexport\\nhome\\nkernel\\nlib\\nmedia\\nmnt\\n\\nnet\\nopt\\nplatform\\nproc\\nroot\\nrpool\\nsbin\\nsystem\\n‘tmp\\nusr\\nvar\\n\\n@kousekip\\nidesktop\\n\\n©\\n\\n©\\n\\nBUNwnSunennh SnuNaeon\\n\\n(Documents\\nDownloads\\nGaMusic\\n\\n5\\n\\nBitrash\\nDevices\\n(Floppy Drive\\nNetwork\\n\\n@ Browse Netw...\\n\\n9\\n9\\n6\\n4\\n9\\n\\n53\\n5\\n6\\n4\\n9\\n10\\n0\\n6\\n18\\n7\\n\\nfovey\\\\aliarel(elare)\\n\\n'})]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a43b2ca",
+   "id": "4afd9593",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -206,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cc500a0",
+   "id": "90a05ddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1c5232e",
+   "id": "a403284d",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -226,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3c31efc1",
+   "id": "5f347897",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b46691",
+   "id": "9c74d618",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -268,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c031f925",
+   "id": "5e7f0d12",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed9de372",
+   "id": "4fa5bff3",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -325,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "78e7e8ac",
+   "id": "6e073f5e",
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725c077c",
+   "id": "e3c1c427",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -388,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d36b9f5",
+   "id": "470db562",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -397,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dd414f3a",
+   "id": "e6ac3d4c",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d17f3497",
+   "id": "16d495a4",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
