--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ae95c7eb",
+   "id": "bbce7cbe",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad2e3ac",
+   "id": "20e32133",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
     "\n",
-    "In this example, we will show you how to run optical character recognition (OCR) on a set of documents and analyze the resulting text with the natural language processing library [spaCy](https://spacy.io/). Running OCR on a large dataset is very computationally expensive, so using Ray for distributed processing can really speed up the processing. Ray Datasets makes it easy to compose the different steps of the pipeline, namely the OCR and the natural language processing.\n",
+    "In this example, we will show you how to run optical character recognition (OCR) on a set of documents and analyze the resulting text with the natural language processing library [spaCy](https://spacy.io/). Running OCR on a large dataset is very computationally expensive, so using Ray for distributed processing can really speed up the processing. Ray Datasets makes it easy to compose the different steps of the pipeline, namely the OCR and the natural language processing. Ray Dataset's actor support also allows us to be more efficient by sharing the spaCy NLP context between several datapoints.\n",
     "\n",
     "To make it more interesting, we will run the analysis on the [LightShot](https://www.kaggle.com/datasets/datasnaek/lightshot) dataset. It is a large publicly available OCR dataset with a wide variety of different documents, all of them screen shots of various forms. It is easy to replace that dataset with your own data and adapt the example to your own use cases!\n",
     "\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0150842f",
+   "id": "c0fd032d",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ae2ea025",
+   "id": "6fac1d2a",
    "metadata": {
     "scrolled": true
    },
@@ -106,18 +106,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58cc4167",
+   "id": "700449fe",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
     "\n",
-    "We can now use the `ray.data.read_binary_files` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and  and then run the `.map` function on this dataset of file names to run the actual OCR process on each file and convert the screen shots into text. Note that we only store the paths of the filenames and the OCR'ed text in the dataset to keep the size of the dataset manageble. If you have large binary blobs like images or videos, it can be beneficial to store them outside of the dataset and store only the extracted information in the dataset."
+    "We can now use the `ray.data.read_binary_files` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the `.map` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c04e38e1",
+   "id": "9d94f857",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5172fca3",
+   "id": "eb243836",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e8f1dbf",
+   "id": "122dc435",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4afd9593",
+   "id": "3cc3e7f2",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a05ddf",
+   "id": "32d03284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a403284d",
+   "id": "2144c5a0",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5f347897",
+   "id": "794b9965",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c74d618",
+   "id": "91bfc2d6",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5e7f0d12",
+   "id": "61130084",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa5bff3",
+   "id": "fd3a262a",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6e073f5e",
+   "id": "84ff87d1",
    "metadata": {
     "scrolled": true
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c1c427",
+   "id": "656225fd",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470db562",
+   "id": "9a6dcd91",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e6ac3d4c",
+   "id": "e4c6da47",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16d495a4",
+   "id": "5b280b97",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
