--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bbce7cbe",
+   "id": "cd49f339",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20e32133",
+   "id": "3440f047",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -60,13 +60,13 @@
     "By default, the following example will run on a tiny dataset we provide. If you want to run it on the full dataset, we recommend to run it on a cluster since processing all the images with tesseract takes a lot of time.\n",
     "\n",
     "````{note}\n",
-    "If you want to run the example on the full [LightShot](https://www.kaggle.com/datasets/datasnaek/lightshot) dataset, you need to download the dataset and extract it. You can extract the dataset by first running `unzip archive.zip` and then `unrar x LightShot13k.rar <target>`.\n",
+    "If you want to run the example on the full [LightShot](https://www.kaggle.com/datasets/datasnaek/lightshot) dataset, you need to download the dataset and extract it. You can extract the dataset by first running `unzip archive.zip` and then `unrar x LightShot13k.rar .` and then you can upload the dataset to S3 with `aws s3 cp LightShot13k/ s3://<bucket>/<folder> --recursive`.\n",
     "````"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c0fd032d",
+   "id": "78d20fd2",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6fac1d2a",
+   "id": "291b63f5",
    "metadata": {
     "scrolled": true
    },
@@ -106,18 +106,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "700449fe",
+   "id": "234b0e88",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
     "\n",
-    "We can now use the `ray.data.read_binary_files` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the `.map` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text."
+    "We can now use the `ray.data.read_binary_files` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the `.map` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text.\n",
+    "\n",
+    "````{note}\n",
+    "If you want to load the data from a private bucket, you have to run\n",
+    "```python\n",
+    "ds = ray.data.read_binary_files(include_paths=True, filesystem=pa.fs.S3FileSystem(\n",
+    "        access_key=\"...\",\n",
+    "        secret_key=\"...\",\n",
+    "        session_token=\"...\"))\n",
+    "```\n",
+    "````"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9d94f857",
+   "id": "0cbb65e5",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb243836",
+   "id": "dcea3cd3",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -154,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "122dc435",
+   "id": "7b427be2",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cc3e7f2",
+   "id": "4795eb82",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -196,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32d03284",
+   "id": "59d8568c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2144c5a0",
+   "id": "66a0c192",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -216,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "794b9965",
+   "id": "2eaa85b0",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91bfc2d6",
+   "id": "52852684",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -258,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "61130084",
+   "id": "eebfe251",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3a262a",
+   "id": "7d876339",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -315,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "84ff87d1",
+   "id": "ae9ae4cb",
    "metadata": {
     "scrolled": true
    },
@@ -346,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "656225fd",
+   "id": "e0bac202",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -378,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6dcd91",
+   "id": "d848ea03",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -387,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e4c6da47",
+   "id": "6c62fcf0",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b280b97",
+   "id": "20795a9a",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
