--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cd49f339",
+   "id": "ee7d0eeb",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3440f047",
+   "id": "806db27d",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d20fd2",
+   "id": "a0693447",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "291b63f5",
+   "id": "6645e7b1",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "234b0e88",
+   "id": "3967b257",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -116,7 +116,11 @@
     "````{note}\n",
     "If you want to load the data from a private bucket, you have to run\n",
     "```python\n",
-    "ds = ray.data.read_binary_files(include_paths=True, filesystem=pa.fs.S3FileSystem(\n",
+    "import pyarrow.fs\n",
+    "\n",
+    "ds = ray.data.read_binary_files(\"s3://<bucket>/<folder>\",\n",
+    "    include_paths=True,\n",
+    "    filesystem=pyarrow.fs.S3FileSystem(\n",
     "        access_key=\"...\",\n",
     "        secret_key=\"...\",\n",
     "        session_token=\"...\"))\n",
@@ -127,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0cbb65e5",
+   "id": "25db1307",
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcea3cd3",
+   "id": "6dc9a59b",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -164,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7b427be2",
+   "id": "210bb76e",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4795eb82",
+   "id": "6b8b8f37",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -206,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59d8568c",
+   "id": "d4c29ce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66a0c192",
+   "id": "5d5b2ac5",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -226,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2eaa85b0",
+   "id": "6c5f9f72",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52852684",
+   "id": "04fa9bb9",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -268,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "eebfe251",
+   "id": "9ac6024c",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d876339",
+   "id": "88603585",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -325,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ae9ae4cb",
+   "id": "44150963",
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0bac202",
+   "id": "3f9361a8",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -388,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d848ea03",
+   "id": "4f03ad74",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -397,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6c62fcf0",
+   "id": "86bf9c46",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20795a9a",
+   "id": "4b3640fb",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
