--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ee7d0eeb",
+   "id": "6f52790d",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "806db27d",
+   "id": "2afa9fdd",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0693447",
+   "id": "f47f8e64",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6645e7b1",
+   "id": "f084af49",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3967b257",
+   "id": "52e2b26d",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "25db1307",
+   "id": "2952cdf5",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dc9a59b",
+   "id": "e215d70b",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "210bb76e",
+   "id": "03728b39",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b8b8f37",
+   "id": "512501b5",
+   "metadata": {},
+   "source": [
+    "### Saving and loading the result of the OCR run\n",
+    "\n",
+    "We are also going to save the result of running tesseract on the dataset on disk so we can read it out later if we want to re-run the NLP analysis without needing to re-run the OCR (which is very expensive on the whole dataset)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c20391c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "results.write_parquet(os.path.expanduser(\"~/LightShot13k_results\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c7cb512",
+   "metadata": {},
+   "source": [
+    "You can later reload the dataset with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c64f82d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = ray.data.read_parquet(os.path.expanduser(\"~/LightShot13k_results\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4c0850e",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -210,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4c29ce2",
+   "id": "b4e2065f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d5b2ac5",
+   "id": "ab17392e",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -230,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6c5f9f72",
+   "id": "e1ba9aa5",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04fa9bb9",
+   "id": "9bbac847",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -272,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9ac6024c",
+   "id": "f414068d",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88603585",
+   "id": "1cfdf3ef",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -329,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "44150963",
+   "id": "d565e3b2",
    "metadata": {
     "scrolled": true
    },
@@ -360,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f9361a8",
+   "id": "c1d74808",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -392,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f03ad74",
+   "id": "3704c3b9",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -401,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "86bf9c46",
+   "id": "706bfb8b",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b3640fb",
+   "id": "45af055f",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
