--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6f52790d",
+   "id": "73d39d76",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2afa9fdd",
+   "id": "0fb7fe85",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f47f8e64",
+   "id": "c9ed4046",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f084af49",
+   "id": "95a69089",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e2b26d",
+   "id": "a19d96f9",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2952cdf5",
+   "id": "9ec8a976",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e215d70b",
+   "id": "ba12f8b3",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the `take` function."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "03728b39",
+   "id": "7512433f",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "512501b5",
+   "id": "bc8960b7",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c20391c",
+   "id": "c4f516b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c7cb512",
+   "id": "8623d83a",
    "metadata": {},
    "source": [
     "You can later reload the dataset with"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c64f82d1",
+   "id": "219670e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4c0850e",
+   "id": "4ceae536",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4e2065f",
+   "id": "2458b3ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab17392e",
+   "id": "5837c6cf",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e1ba9aa5",
+   "id": "6ccf5a44",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bbac847",
+   "id": "510233c4",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f414068d",
+   "id": "a05255a7",
    "metadata": {},
    "outputs": [
     {
@@ -347,19 +347,18 @@
     "\n",
     "        self.nlp.add_pipe('language_detector', last=True)\n",
     "\n",
-    "    def __call__(self, row):\n",
-    "        row = dict(row)\n",
-    "        doc = self.nlp(row[\"text\"])\n",
-    "        row[\"language\"] = doc._.language[\"language\"]\n",
-    "        row[\"score\"] = doc._.language[\"score\"]\n",
-    "        return row\n",
+    "    def __call__(self, df):\n",
+    "        docs = list(self.nlp.pipe(list(df[\"text\"])))\n",
+    "        df[\"language\"] = [doc._.language[\"language\"] for doc in docs]\n",
+    "        df[\"score\"] = [doc._.language[\"score\"] for doc in docs]\n",
+    "        return df\n",
     "\n",
-    "results.limit(10).map(SpacyBatchInference, compute=\"actors\")"
+    "results.limit(10).map_batches(SpacyBatchInference, compute=\"actors\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1cfdf3ef",
+   "id": "9440e1e7",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -368,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d565e3b2",
+   "id": "aa2b732f",
    "metadata": {
     "scrolled": true
    },
@@ -393,13 +392,13 @@
     }
    ],
    "source": [
-    "languages = results.map(SpacyBatchInference, compute=\"actors\")\n",
+    "languages = results.map_batches(SpacyBatchInference, compute=\"actors\")\n",
     "languages.groupby(\"language\").count().show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c1d74808",
+   "id": "7b4676f6",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3704c3b9",
+   "id": "8f0b909a",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -440,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "706bfb8b",
+   "id": "333d43fb",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45af055f",
+   "id": "72e7f827",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
